# RepoScout

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  main.py  main_optimized.py  models.py  pyproject.toml  requirements.txt  test_cache.py  test_error_detection.py  test_fallback.py  test_performance.py  test_retry.py
agent/: optimized_prompts.py  optimized_reposcout.py  prompts.py  reposcout_agent.py
deploy/: DEPLOY.md
k8s/: deployment.yaml  service.yaml
tests/: test_advanced_tools.py  test_cache.py  test_error_detection.py  test_repo_evaluator.py  test_retry.py  test_sanitizer.py
tools/: github_search.py  repo_evaluator.py
utils/: cache_manager.py  error_handler.py  exceptions.py  fallback_manager.py  github_search.py  logger.py  parallel_executor.py  performance_monitor.py  retry_manager.py  sanitizer.py  streaming.py  test_parallel.py
