[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "reposcout"
version = "1.0.0"
description = "RepoScout – AI-powered GitHub Repository Discovery Agent"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
reposcout = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",   # mock HTTP calls in tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
